[tool.poetry]
name = "repl_python3_Discord-Captcha-Bot"
version = "0.1.0"
description = ""
authors = ["saivarshithsunn <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
captcha = "^0.3"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
